--- a/index.html
+++ b/index.html
@@ -392,6 +392,13 @@
         <div class="lorem60">There are many variations of pass 
           ages of Lorem ipsum available,but the majority have sufferd alteart ion in some from injected <br><br><br> Continue Reading
         </div>
+     <footer>
+          <address> All rights preserved</address>
+     </footer>
+
+
+
+
 <!-- js -->
     <script src="./weblayout_jq.js" alt="" height="10%"></script>
   </body>
